added panel heading

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -727,7 +727,7 @@ function resultPost (result){
 		postedtime = `${diffSeconds} seconds ago`
 	}
 	var insidePost = `
-	<div class="panel panel-default">
+	<div class="panel panel-success">
 		<div class="panel-heading">
 			<div class="spost clearfix">
 				<div class="entry-image">
@@ -802,7 +802,7 @@ function resultPost (result){
 
 				        var insideHTML =
 				        `
-								<div class="panel panel-default">
+								<div class="panel panel-success">
 									<div class="panel-heading">
 										<div class="spost clearfix">
 											<div class="entry-image">
