added modal for transaction detail

--- a/views/cms-dashboard.gudang.ejs
+++ b/views/cms-dashboard.gudang.ejs
@@ -31,6 +31,7 @@
 	<!--[if lt IE 9]>
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.1.1/sweetalert2.min.css">
 
 		<link rel="stylesheet" href="demos/app-landing/css/colors.css" type="text/css" />
 	<!-- Document Title
