--- a/views/home.ejs
+++ b/views/home.ejs
@@ -403,7 +403,7 @@
 
 									<div class="">
 										Copyrights &copy; 2016 All Rights Reserved by ivangerard.com<br>
-										<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
+										<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a> / <a href="/cms-transaction">Admin Panel</a></div>
 									</div>
 
 								</div>
