--- a/views/cms-dashboard.transaction.ejs
+++ b/views/cms-dashboard.transaction.ejs
@@ -32,6 +32,8 @@
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
 
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.1.1/sweetalert2.min.css">
+
 		<link rel="stylesheet" href="demos/app-landing/css/colors.css" type="text/css" />
 	<!-- Document Title
 	============================================= -->
@@ -160,6 +162,86 @@
 			</div>
 
 		</section><!-- #content end -->
+		<button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">52000</button>
+
+		<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-body">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h4 class="modal-title" id="myModalLabel">Details Transaciton</h4>
+						</div>
+						<div class="modal-body">
+							<div class="table-responsive">
+													<table class="table table-bordered table-striped">
+													  <colgroup>
+														<col class="col-xs-3">
+														<col class="col-xs-1">
+														<col class="col-xs-2">
+														<col class="col-xs-2">
+													  </colgroup>
+													  <thead>
+														<tr>
+														  <th>Item Name</th>
+														  <th>Item Price</th>
+															<th>Item Quantity</</th>
+															<th>Item Total Price</</th>
+														</tr>
+													  </thead>
+													  <tbody>
+														<tr>
+														  <td>
+															Cangkul
+														  </td>
+														  <td>2000</td>
+															<td>30</td>
+															<td>60000</td>
+														</tr>
+														<tr>
+														  <td>
+															Cangkul
+														  </td>
+														  <td>2000</td>
+															<td>30</td>
+															<td>60000</td>
+														</tr>
+														<tr>
+														  <td>
+															Cangkul
+														  </td>
+														  <td>2000</td>
+															<td>30</td>
+															<td>60000</td>
+														</tr>
+														<tr>
+														  <td>
+															Cangkul
+														  </td>
+														  <td>2000</td>
+															<td>30</td>
+															<td>60000</td>
+														</tr>
+														<tr>
+														  <td>
+															Cangkul
+														  </td>
+														  <td>2000</td>
+															<td>30</td>
+															<td>60000</td>
+														</tr>
+													  </tbody>
+
+													</table>
+												  </div>
+						</div>
+						<div class="modal-footer">
+									<h5><b>Total Transaction : 500000</b>		</h5>			
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<footer id="footer" style="background-color: #FFF;">
 
