--- a/views/cms-dashboard.transaction.ejs
+++ b/views/cms-dashboard.transaction.ejs
@@ -98,7 +98,8 @@
 								<ul class="nav nav-tabs nav-justified">
 									<li class="active"><a href="/cms-transaction"><i class="icon-note"></i> Transaction</a></li>
 									<li class=""><a href="/cms-user"><i class="icon-user4"></i> User</a></li>
-									<li class=""><a href="/cms-gudang"><i class="icon-home2"></i> Gudang</a></li>
+									<li class=""><a href="/cms-gudang"><i class="icon-home2"></i> Warehouse</a></li>
+									<li class=""><a href="/cms-item"><i class="icon-cube"></i> Item</a></li>
 						</ul>
 						<br>
 
@@ -236,7 +237,7 @@
 												  </div>
 						</div>
 						<div class="modal-footer">
-									<h5><b>Total Transaction : 500000</b>		</h5>			
+									<h5><b>Total Transaction : 500000</b>		</h5>
 						</div>
 					</div>
 				</div>
