--- a/views/cms-dashboard.item.ejs
+++ b/views/cms-dashboard.item.ejs
@@ -28,14 +28,13 @@
 
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.1.1/sweetalert2.min.css">
+
 	<!--[if lt IE 9]>
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.1.1/sweetalert2.min.css">
 
 		<link rel="stylesheet" href="demos/app-landing/css/colors.css" type="text/css" />
-	<!-- Document Title
-	============================================= -->
 
 	<title><%= title %></title>
 
@@ -97,45 +96,33 @@
 								<ul class="nav nav-tabs nav-justified">
 									<li class=""><a href="/cms-transaction"><i class="icon-note"></i> Transaction</a></li>
 									<li class=""><a href="/cms-user"><i class="icon-user4"></i> User</a></li>
-									<li class="active"><a href="/cms-gudang"><i class="icon-home2"></i> Warehouse</a></li>
-									<li class=""><a href="/cms-item"><i class="icon-cube"></i> Item</a></li>
+									<li class=""><a href="/cms-gudang"><i class="icon-home2"></i> Warehouse</a></li>
+									<li class="active"><a href="/cms-item"><i class="icon-cube"></i> Item</a></li>
 						</ul>
 						<br>
 
 							<div class="clear"></div>
 
-						<button class="button button-3d button-rounded button-green fright" data-toggle="modal" data-target="#add-warehouse"><i class="icon-user "></i>Add Warehouse</button>
+						<button class="button button-3d button-rounded button-green fright" data-toggle="modal" data-target="#myModal"><i class="icon-user "></i>Add Item</button>
 
-						<div class="modal fade" id="add-warehouse" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+						<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-body">
 									<div class="modal-content">
 										<div class="modal-header">
 											<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-											<h4 class="modal-title" id="myModalLabel">Add Warehouse</h4>
+											<h4 class="modal-title" id="myModalLabel">Add Item</h4>
 										</div>
 
 										<div class="modal-body">
-											<form action="/api/warehouse" method="post" class="nobottommargin">
+											<form action="/api/users" method="post" class="nobottommargin">
 												<div class="col_full">
-													<label class="font-body capitalize" for="warehouse-name">Warehouse Name:</label>
-													<input type="text" id="warehouse-name" name="name" value="" class="form-control" />
-												</div>
-												<div class="col_full">
-													<label class="font-body capitalize" for="warehouse-location">Location</label>
-													<input type="text" id="warehouse-location" name="location" value="" class="form-control" />
-												</div>
-												<div class="col_full">
-													<label class="font-body capitalize" for="warehouse-location">Type</label>
-													<input type="text" id="warehouse-type" name="type" value="" class="form-control" />
-												</div>
-
-
-												<div class="col_full" id="userdiv">
+													<label class="font-body capitalize" for="register-form-modal-fullname">Item Name:</label>
+													<input type="text" id="register-form-modal-fullname" name="name" value="" class="form-control" />
 												</div>
 
 												<div class="col_full nobottommargin">
-													<button class="button button-rounded nomargin" id="warehouse-form-modal-submit" name="warehouse-form-modal-submit" type="submit" value="warehouse">Submit</button>
+													<button class="button button-rounded nomargin" id="register-form-modal-submit" name="register-form-modal-submit" type="submit" value="register">Submit</button>
 												</div>
 											</form>
 										</div>
@@ -151,7 +138,7 @@
 								<div class="col-md-12">
 
 
-									<span id="total-gudang">Total Gudang: </span>
+									<span id="total-user">Total Users: </span>
 									<br>
 
 									<div class="table-responsive">
@@ -172,18 +159,16 @@
 					</colgroup>
 					<thead>
 					<tr>
-						<th>Created At
+						<th>Full Name
 					</th>
-						<th>Warehouse Name</th>
-						<th>Location</th>
-						<th>PIC</th>
-						<th>Total Transaction</th>
+						<th>Email Address</th>
 						<th>Action</th>
+						<th>Status</th>
 
 
 					</tr>
 					</thead>
-					<tbody id="list-gudang">
+					<tbody id="list-user">
 
 					</tbody>
 				</table>
@@ -258,45 +243,24 @@
 
 	<script>
 	$(document).ready(function() {
-					function setPicOption() {
-						$.ajax({
-							url: '/api/users',
-							type: 'GET',
-							success: function(result) {
-								if(result.success){
-									var userlist = ""
-									for (var i = 0; i < result.data.length; i++) {
-										userlist += `<option value=${result.data[i]._id} selected="selected">${result.data[i].name}(${result.data[i].userEmail})</option>`
-									}
-									var useroption = `
-									<label class="font-body capitalize" for="warehouse-pic">PIC</label>
-									<select id="warehouse-pic" name="userId" value="" class="form-control">
-								  ${userlist}
-									</select>`
-									$('#userdiv').html(useroption)
-								}
-							}
-						})
-					}
-					setPicOption()
-					$("#warehouse-form-modal-submit").unbind().on("click",function(event){
+
+					$("#register-form-modal-submit").unbind().on("click",function(event){
 
 							event.preventDefault()
 							$.ajax({
-									url: '/api/warehouse',
+									url: '/api/users',
 									type: 'POST',
 									data: {
-											name: $("#warehouse-name").val(),
-											location: $("#warehouse-location").val(),
-											type: $("#warehouse-type").val(),
-											userId: $("#warehouse-pic").val()
+											name: $("#register-form-modal-fullname").val(),
+											email: $("#register-form-modal-email").val(),
+											password: $("#register-form-modal-password").val()
 									},
 									success: function(result) {
 										location.reload();
 
-	// 									var fullname = $("#warehouse-name").val()
+	// 									var fullname = $("#register-form-modal-fullname").val()
 	// 									console.log(fullname)
-	// 									var email = $("#warehouse-location").val()
+	// 									var email = $("#register-form-modal-email").val()
 	// 									var resultHTML =
 	// 									`
 	// 									<tr>
@@ -313,82 +277,54 @@
 				})
 
 
-		listGudang()
-		settotaltransactions()
+		listUsers()
 		jQuery( "#tabs-profile" ).on( "tabsactivate", function( event, ui ) {
 			jQuery( '.flexslider .slide' ).resize();
 		});
 	});
 
-	function listGudang() {
+	function listUsers() {
 		$.get({
-				url: "/api/warehouse/",
+				url: "/api/users/",
 				success: function(result) {
-					console.log()
-					var jmlGudang = result.length
-						$('#total-gudang').append(jmlGudang)
+					var jmluser = result.data.length
+						$('#total-user').append(jmluser)
 
-					for (var k in result){
+					for (var k in result.data){
 
 							var listdataHTML =
 							`
-										<tr id="${result[k]._id}table">
-											<td>${result[k].createdAt}</td>
-											<td>${result[k].name}</td>
-											<td>${result[k].location}
+										<tr>
+											<td>${result.data[k].name}</td>
+											<td>${result.data[k].userEmail}
 											</td>
-											<td>${result[k].userId.name}
-											</td>
-											<td id="${result[k]._id}status" class="totaltr">${result[k].isActive}</td>
+											<td id="${result.data[k]._id}status">${result.data[k].isActive}</td>
 											<td>
-	<a href="#" data-id='${result[k]._id}'class="remove update-gudang button  button-mini button-rounded button-red"  title="Update this item">Delete</a>
-											</td>
+	<a href="#" data-id='${result.data[k]._id}'class="remove update-usr button  button-mini button-rounded button-red"  title="Update this item">Deactivate</a>
+	<a href="#" data-id='${result.data[k]._id}'class="remove update-active button  button-mini button-rounded button-blue"  title="Update this item">Activate</a>
 
+											</td>
 										</tr>
 							`
 
-						$('#list-gudang').prepend(listdataHTML)
-						$(".update-gudang").click(function() {
-								deleteWarehouse($(this).attr('data-id'))
+						$('#list-user').prepend(listdataHTML)
+						$(".update-usr").click(function() {
+								deactivate($(this).attr('data-id'))
+						})
+						$(".update-active").click(function() {
+								activate($(this).attr('data-id'))
 						})
 
 					}
 				}
 		})
 	}
-	function settotaltransactions() {
-		$.ajax({
-				url: `/api/transactions`,
-				type: 'GET',
-				success: function(transactions) {
-					console.log(transactions, "testny ok");
-					if(transactions.success){
-						for (var i = 0; i < transactions.data.length; i++) {
-							var total = 0
-
-							console.log(transactions.data[i]._id,"5 kali")
-							for (var j = 0; j < transactions.data[i].transactions.length; j++) {
-
-								total += transactions.data[i].transactions[j].nominal
-							}
-							var trrow = `${transactions.data[i].transactions.length} Transactions <br>`
-							$(`#${transactions.data[i]._id}status`).html(trrow+"Rp. "+(total+"").replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,"))
-						}
-					} else{
-						$(".totaltr").each(function () {
-							$(this).html(0)
-						})
-					}
-				}
-			})
-
-	}
 
 
-function deleteWarehouse(id){
+function deactivate(id){
 	console.log(id)
 	swal({
-  title: 'Are you sure want to delete?',
+  title: 'Are you sure want to deactivate?',
   text: "This can't be undo",
   type: 'warning',
   showCancelButton: true,
@@ -397,16 +333,47 @@ function deleteWarehouse(id){
   confirmButtonText: 'Yes, Status Change!'
 }).then(function () {
   swal(
-    'Deleted!',
-    'Your data has been deleted.',
+    'Edited!',
+    'Your status has been changed.',
     'success'
   ).then(function(){
 		$.ajax({
-				url: '/api/warehouse/'+id,
-				type: 'DELETE',
+				url: '/api/users/deactivate/'+id,
+				type: 'POST',
 				success: function(result) {
 					console.log(result)
-			$(`#${id}table`).html('')
+			$(`#${id}status`).html('NonActive')
+				}
+		})
+	})
+})
+}
+
+
+
+
+function activate(id){
+	console.log(id)
+	swal({
+  title: 'Are you sure want to deactivate?',
+  text: "This can't be undo",
+  type: 'warning',
+  showCancelButton: true,
+  confirmButtonColor: '#3085d6',
+  cancelButtonColor: '#d33',
+  confirmButtonText: 'Yes, Status Change!'
+}).then(function () {
+  swal(
+    'Edited!',
+    'Your status has been changed.',
+    'success'
+  ).then(function(){
+		$.ajax({
+				url: '/api/users/activate/'+id,
+				type: 'POST',
+				success: function(result) {
+					console.log(result)
+			$(`#${id}status`).html('Active')
 				}
 		})
 	})
