--- a/views/cms-dashboard.user.ejs
+++ b/views/cms-dashboard.user.ejs
@@ -96,7 +96,8 @@
 								<ul class="nav nav-tabs nav-justified">
 									<li class=""><a href="/cms-transaction"><i class="icon-note"></i> Transaction</a></li>
 									<li class="active"><a href="/cms-user"><i class="icon-user4"></i> User</a></li>
-									<li class=""><a href="/cms-gudang"><i class="icon-home2"></i> Gudang</a></li>
+									<li class=""><a href="/cms-gudang"><i class="icon-home2"></i> Warehouse</a></li>
+									<li class=""><a href="/cms-item"><i class="icon-cube"></i> Item</a></li>
 						</ul>
 						<br>
 
