--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
 						</ul>
 
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
-							<li><a href="#" data-href="#section-faqs"><div>FAQs</div></a></li>
+							<!-- <li><a href="#" data-href="#section-faqs"><div>FAQs</div></a></li> -->
 							<li class="menu-item-emphasis"><a href="#modal-login" data-lightbox="inline"><div>Login</div></a></li>
 						</ul>
 
@@ -106,6 +106,7 @@
 								</div>
 								<a href="#modal-register" data-scrollto="#section-pricing" data-easing="easeInOutExpo" data-speed="1250" data-offset="160" class="button button-large button-white button-light capitalize" style="border-radius: 23px;">Register Now</a>
 								<a href="https://www.youtube.com/watch?v=N_r349riLEE" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Video</a>
+							
 							</div>
 						</div>
 					</div>
@@ -408,7 +409,7 @@ Investing and funding our company that we will use it to build or collection cen
 
 				<div class="clear bottommargin"></div>
 
-				<div class="container clearfix">
+				<!-- <div class="container clearfix">
 
 					<div id="section-faqs" class="page-section nopadding nomargin">
 
@@ -445,7 +446,7 @@ Investing and funding our company that we will use it to build or collection cen
 
 					</div>
 
-				</div>
+				</div> -->
 
 
 
@@ -458,7 +459,7 @@ Investing and funding our company that we will use it to build or collection cen
 					</div>
 				</div> -->
 
-				<div class="" style="padding: 30px 0; color: #999; background-color: #F8FAFB; border-top: 1px solid #E5E5E5; border-bottom: 1px solid #E5E5E5;">
+				<!-- <div class="" style="padding: 30px 0; color: #999; background-color: #F8FAFB; border-top: 1px solid #E5E5E5; border-bottom: 1px solid #E5E5E5;">
 					<div class="container clearfix">
 						<div class="row topmargin-lg clearfix">
 							<div class="container clearfix">
@@ -583,7 +584,7 @@ Investing and funding our company that we will use it to build or collection cen
 
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="center  nobg">
 					<div class="container clearfix">
